# cbl_c_fd_max_repro

./: .gitignore  README.md
android/: .gitignore  CMakeLists.txt  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/cbl_c_fd_max_demo/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native-lib.cc
android/app/src/main/java/com/example/cbl_c_fd_max_demo/: FirstFragment.kt  MainActivity.kt  NativeLib.java  SecondFragment.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/cbl_c_fd_max_demo/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
data/: logcat.txt  stack-trace.txt
linux/: CMakeLists.txt
linux/src/: main.cc
